--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,46 @@
+button {
+    background-color: green;
+    color:white;
+    border-radius:8px;
+    text-size-adjust:150%;
+    border: 0px;
+    width: 25%
+}
+.popup {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; 
+    text-align:center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
 html {
     box-sizing: border-box;
 }
@@ -51,34 +94,68 @@ h1 {
     margin: 0 0 3em;
 }
 
-.deck .card {
-    height: 125px;
-    width: 125px;
-    background: #2e3d49;
-    font-size: 0;
-    color: #ffffff;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
-}
+    .deck .card {
+        height: 125px;
+        width: 125px;
+        background: #2e3d49;
+        font-size: 0;
+        color: #ffffff;
+        border-radius: 8px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    }
 
-.deck .card.open {
-    transform: rotateY(0);
-    background: #02b3e4;
-    cursor: default;
-}
+        .deck .card.open {
+            background: #02b3e4;
+            cursor: default;
+        }
 
-.deck .card.show {
-    font-size: 33px;
+        .deck .card.show {
+            font-size: 33px;
+        }
+
+        .deck .card.notMatch {
+            background: red;
+            transition: background .3s;
+            animation: shake .75s
+        }
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10%, 90% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20%, 80% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30%, 50%, 70% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40%, 60% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
 }
 
 .deck .card.match {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+    animation: bounce 0.5s linear 1;
+}
+
+@keyframes bounce {
+    52% {
+        transform: scale(1.1);
+    }
 }
 
 /*
@@ -91,19 +168,19 @@ h1 {
     margin-bottom: 10px;
 }
 
-.score-panel .stars {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    margin: 0 5px 0 0;
-}
+    .score-panel .stars {
+        margin: 0;
+        padding: 0;
+        display: inline-block;
+        margin: 0 5px 0 0;
+    }
 
-.score-panel .stars li {
-    list-style: none;
-    display: inline-block;
-}
+        .score-panel .stars li {
+            list-style: none;
+            display: inline-block;
+        }
 
-.score-panel .restart {
-    float: right;
-    cursor: pointer;
-}
+    .score-panel .restart {
+        float: right;
+        cursor: pointer;
+    }
