--- a/css/app.css
+++ b/css/app.css
@@ -1,29 +1,33 @@
 button {
     background-color: green;
-    color:white;
-    border-radius:8px;
-    text-size-adjust:150%;
+    color: white;
+    border-radius: 8px;
+    text-size-adjust: 150%;
     border: 0px;
-    width: 25%
+    width: 25%;
+    cursor: pointer;
+    text-decoration: none;
+    cursor: pointer;
 }
+
 .popup {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%; 
-    background-color: rgba(0,0,0,0.4); 
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
 }
 
 .popup-content {
     background-color: #fefefe;
-    margin: 15% auto; 
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 50%; 
-    text-align:center;
+    width: 50%;
+    text-align: center;
 }
 
 .close {
@@ -33,13 +37,12 @@ button {
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
 html {
     box-sizing: border-box;
@@ -81,7 +84,8 @@ h1 {
  */
 
 .deck {
-    width: 660px;
+    width: 100%;
+    max-width: 660px;
     min-height: 680px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
@@ -106,6 +110,7 @@ h1 {
         justify-content: center;
         align-items: center;
         box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+        margin: 5px;
     }
 
         .deck .card.open {
@@ -164,8 +169,12 @@ h1 {
 
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 100%;
+    max-width: 345px;
     margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
     .score-panel .stars {
@@ -175,12 +184,67 @@ h1 {
         margin: 0 5px 0 0;
     }
 
-        .score-panel .stars li {
-            list-style: none;
-            display: inline-block;
-        }
+    .score-panel .timer {
+        display: inline-block;
+    }
+
+    .score-panel .stars li {
+        list-style: none;
+        display: inline-block;
+    }
 
     .score-panel .restart {
         float: right;
         cursor: pointer;
     }
+
+@media screen and (max-width: 377px) {
+    .score-panel {
+        padding: 0 10px;
+    }
+}
+
+@media screen and (max-width: 855px) {
+    button {
+        text-size-adjust: 0;
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 433px) {
+    .popup-content {
+        width: 75%;
+    }
+
+    button {
+        text-size-adjust: 0;
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 633px) {
+    .deck {
+        padding: 16px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .deck {
+        padding: 0;
+    }
+}
+
+@media screen and (max-height: 350px) {
+    .popup-content {
+        margin: 0 auto;
+        padding: 0;
+    }
+
+    button {
+        margin-bottom: 10px;
+    }
+
+    .close {
+        margin-right: 5px;
+    }
+}
